Halfway through, test pass.
Completed page orchestrator - runnable, spins of page parsers
Completed page parser - reads pages and extracts urls